--- a/index.html
+++ b/index.html
@@ -4,16 +4,12 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width" />
 
-  <link rel="stylesheet" href="css/leaflet.css" />
+  <!-- Only one Leaflet CSS and one Leaflet Draw CSS -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet-draw@1.0.4/dist/leaflet.draw.css" />
   <link rel="icon" href="data/1-aafea2ea.ico" type="image/ico" />
 
-<!-- Leaflet Draw -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet-draw@1.0.4/dist/leaflet.draw.css" />
-<script src="https://cdn.jsdelivr.net/npm/leaflet-draw@1.0.4/dist/leaflet.draw.js"></script>
-
-<!-- Turf.js -->
-<script src="https://unpkg.com/@turf/turf@6.5.0/turf.min.js"></script>
-  
+  <title>Locatievinder Fitnesscentra</title>
   <style>
     html, body {
       width: 100%; height: 100%; margin: 0; padding: 0;
@@ -51,48 +47,48 @@
       z-index: 0;
     }
     .control-box {
-  position: absolute;
-  top: 90px;
-  left: 10px;
-  background: rgba(255,255,255,0.75);
-  padding: 10px 12px 15px 12px; /* minder padding */
-  border-radius: 8px;
-  box-shadow: 0 0 5px rgba(0,0,0,0.3);
-  z-index: 1100;
-  width: 320px;
-  font-size: 12px;
-  user-select: none;
-  display: flex;
-  flex-direction: column;
-  gap: 10px; /* minder afstand tussen items */
-}
-.control-box-title {
-  font-size: 14px;
-  font-weight: bold;
-  margin-bottom: 5px; /* minder ruimte onder titel */
-  color: #2C3E83;
-}
-.control-box label {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 8px; /* minder gap tussen label tekst en input */
-  margin-bottom: 0;
-}
-.control-box label span {
-  flex-shrink: 0;
-  width: 38px;
-  text-align: right;
-  font-weight: 600;
-  user-select: none;
-}
-.control-box input[type=range] {
-  flex-grow: 1;
-  cursor: pointer;
-  height: 18px;
-  margin-left: 0;
-  margin-right: 0;
-}
+      position: absolute;
+      top: 90px;
+      left: 10px;
+      background: rgba(255,255,255,0.75);
+      padding: 10px 12px 15px 12px;
+      border-radius: 8px;
+      box-shadow: 0 0 5px rgba(0,0,0,0.3);
+      z-index: 1100;
+      width: 320px;
+      font-size: 12px;
+      user-select: none;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+    }
+    .control-box-title {
+      font-size: 14px;
+      font-weight: bold;
+      margin-bottom: 5px;
+      color: #2C3E83;
+    }
+    .control-box label {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 8px;
+      margin-bottom: 0;
+    }
+    .control-box label span {
+      flex-shrink: 0;
+      width: 38px;
+      text-align: right;
+      font-weight: 600;
+      user-select: none;
+    }
+    .control-box input[type=range] {
+      flex-grow: 1;
+      cursor: pointer;
+      height: 18px;
+      margin-left: 0;
+      margin-right: 0;
+    }
     #transparency-label {
       margin-top: 10px;
       user-select: none;
@@ -150,7 +146,7 @@
       line-height: 1.3;
     }
     .legend {
-      position: absolute; /* belangrijk voor absolute kinderen */
+      position: absolute;
       bottom: 10px;
       left: 10px;
       padding: 8px 12px;
@@ -226,7 +222,6 @@
       line-height: 1.3;
       display: none;
     }
-    /* Minimaliseerknop rechtsboven in legend met grijs vierkant */
     #legend-toggle {
       position: absolute;
       top: 6px;
@@ -245,17 +240,15 @@
       box-shadow: 0 1px 3px rgba(0,0,0,0.2);
       z-index: 1200;
     }
-.leaflet-control-layers {
-  top: 14px !important; /* net onder de zoomknoppen */
-  right: 4px !important;
-  background: rgba(255, 255, 255, 0.8);
-  border-radius: 6px;
-  padding: 6px 10px;
-  box-shadow: 0 0 5px rgba(0,0,0,0.2);
-}    
-
+    .leaflet-control-layers {
+      top: 14px !important;
+      right: 4px !important;
+      background: rgba(255, 255, 255, 0.8);
+      border-radius: 6px;
+      padding: 6px 10px;
+      box-shadow: 0 0 5px rgba(0,0,0,0.2);
+    }
   </style>
-  <title>Locatievinder Fitnesscentra</title>
 </head>
 <body>
 
@@ -265,8 +258,7 @@
 </div>
 
 <div class="control-box" id="control-box">
- <h2 class="control-box-title">Wegingsfactoren Multicriteria Analyse (MCA)</h2>
-
+  <h2 class="control-box-title">Wegingsfactoren Multicriteria Analyse (MCA)</h2>
   <label for="weight-fitness">Nabijheid fitnesscentra:
     <input type="range" min="0" max="1" step="0.01" id="weight-fitness" value="0.30" />
     <span id="percent-fitness">30%</span>
@@ -284,7 +276,7 @@
     <div id="info-text">De suitability index is het resultaat van de MCA waarbij verschillende wegingen kunnen worden toegepast.</div>
   </button>
   <button id="reset-btn" type="button">Reset</button>
-   <label id="transparency-label" for="transparency-slider">Raster transparantie:
+  <label id="transparency-label" for="transparency-slider">Raster transparantie:
     <input type="range" min="0" max="1" step="0.01" id="transparency-slider" value="0.5" />
     <span id="percent-transparency">50%</span>
   </label>
@@ -302,27 +294,30 @@
   <div class="legend-header" style="display: flex; justify-content: space-between; align-items: center;">
     <span class="legend-title">Suitability index</span>
   </div>
- <div class="legend-bar legend-scale">
-  <div class="color-box" style="background:#d73027"></div>  <!-- donker rood -->
-  <div class="color-box" style="background:#f46d43"></div>
-  <div class="color-box" style="background:#fdae61"></div>
-  <div class="color-box" style="background:#fee08b"></div>
-  <div class="color-box" style="background:#d9ef8b"></div>
-  <div class="color-box" style="background:#a6d96a"></div>
-  <div class="color-box" style="background:#1a9641"></div>  <!-- donker groen -->
-</div>
-    <div class="legend-labels">
-      <span class="legend-label-left">0 </span>
-      <span class="legend-label-right">10</span>
-    </div>
-    <div class="legend-info" id="legend-info" style="display: none;">
-      De suitability index is het resultaat van de factoren waarbij verschillende wegingen kunnen worden toegepast. 0 = niet geschikt | 10 = uiterst geschikt
-    </div>
+  <div class="legend-bar legend-scale">
+    <div class="color-box" style="background:#d73027"></div>
+    <div class="color-box" style="background:#f46d43"></div>
+    <div class="color-box" style="background:#fdae61"></div>
+    <div class="color-box" style="background:#fee08b"></div>
+    <div class="color-box" style="background:#d9ef8b"></div>
+    <div class="color-box" style="background:#a6d96a"></div>
+    <div class="color-box" style="background:#1a9641"></div>
+  </div>
+  <div class="legend-labels">
+    <span class="legend-label-left">0 </span>
+    <span class="legend-label-right">10</span>
+  </div>
+  <div class="legend-info" id="legend-info" style="display: none;">
+    De suitability index is het resultaat van de factoren waarbij verschillende wegingen kunnen worden toegepast. 0 = niet geschikt | 10 = uiterst geschikt
   </div>
 </div>
 
-<script src="js/leaflet.js"></script>
+<!-- JS includes at bottom for correct order -->
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/leaflet-draw@1.0.4/dist/leaflet.draw.js"></script>
+<script src="https://unpkg.com/@turf/turf@6.5.0/turf.min.js"></script>
 <script>
+  // Info icon logic
   const infoIcon = document.getElementById('info-icon');
   const infoText = document.getElementById('info-text');
   infoIcon.addEventListener('click', () => {
@@ -336,9 +331,9 @@
 
   function getCenterCoords() {
     if (window.innerWidth <= 768) {
-      return [52.10, 5.10];  // mobiel iets westelijker
+      return [52.10, 5.10];
     } else {
-      return [52.09, 5.42];  // desktop
+      return [52.09, 5.42];
     }
   }
 
@@ -354,9 +349,9 @@
     zoomSnap: 0.5,
     zoomDelta: 0.5
   }).setView(getCenterCoords(), 12);
-  
+
   map.setZoom(map.getZoom() - 0.5);
-  
+
   L.control.zoom({ position: 'topright' }).addTo(map);
   L.control.scale({ position: 'bottomright' }).addTo(map);
 
@@ -364,12 +359,14 @@
     attribution: '&copy; OpenStreetMap contributors'
   }).addTo(map);
 
- function getColor(score) {
-  return score > 6 ? '#1a9641' :   // >6 = donkergroen (hoog)
-         score > 4 ? '#a6d96a' :   // >4 = lichtgroen
-         score > 2 ? '#fdae61' :   // >2 = oranje
-                     '#d7191c';    // <=2 = rood (laag)
-}
+  function getColor(score) {
+    return score > 6 ? '#1a9641' :
+           score > 4 ? '#a6d96a' :
+           score > 2 ? '#fdae61' :
+                       '#d7191c';
+  }
+
+  let currentTransparency = 0.5;
 
   function styleFeature(feature) {
     return {
@@ -398,19 +395,18 @@
   }
 
   let layer_group;
-  let currentTransparency = 0.5;
 
-const satelliteLayer = L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/' +
-  'World_Imagery/MapServer/tile/{z}/{y}/{x}', {
-  maxZoom: 19,
-  attribution: 'Tiles © Esri'
-});
+  const satelliteLayer = L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/' +
+    'World_Imagery/MapServer/tile/{z}/{y}/{x}', {
+    maxZoom: 19,
+    attribution: 'Tiles © Esri'
+  });
 
-const overlays = {
-  "Satelliet": satelliteLayer
-};
+  const overlays = {
+    "Satelliet": satelliteLayer
+  };
 
-L.control.layers(null, overlays, { position: 'topright' }).addTo(map);
+  L.control.layers(null, overlays, { position: 'topright' }).addTo(map);
 
   fetch('data/gridlayer_mca_fitness.geojson')
     .then(res => res.json())
@@ -430,18 +426,17 @@ L.control.layers(null, overlays, { position: 'topright' }).addTo(map);
     let w_fit = parseFloat(document.getElementById('weight-fitness').value) || 0;
     let w_pop = parseFloat(document.getElementById('weight-pop').value) || 0;
 
-    // Automatische normalisatie:
+    // Normalisatie
     const sum = w_ov + w_fit + w_pop;
     if (sum > 0) {
       w_ov /= sum;
       w_fit /= sum;
       w_pop /= sum;
     } else {
-      // voorkom delen door nul, zet default waarden
       w_ov = 0.2; w_fit = 0.3; w_pop = 0.5;
     }
 
-    // Update sliders naar genormaliseerde waarden en percentages
+    // Sliders en percentages
     document.getElementById('weight-ov').value = w_ov.toFixed(3);
     document.getElementById('percent-ov').textContent = Math.round(w_ov * 100) + '%';
 
@@ -451,19 +446,21 @@ L.control.layers(null, overlays, { position: 'topright' }).addTo(map);
     document.getElementById('weight-pop').value = w_pop.toFixed(3);
     document.getElementById('percent-pop').textContent = Math.round(w_pop * 100) + '%';
 
-    layer_group.eachLayer(layer => {
-      const p = layer.feature.properties;
-      const ov = parseFloat(p.score_bus) || 0;
-      const fit = parseFloat(p.score_fit) || 0;
-      const pop = parseFloat(p.score_pop) || 0;
-      p.MCA_score = w_ov * ov + w_fit * fit + w_pop * pop;
+    if (layer_group) {
+      layer_group.eachLayer(layer => {
+        const p = layer.feature.properties;
+        const ov = parseFloat(p.score_bus) || 0;
+        const fit = parseFloat(p.score_fit) || 0;
+        const pop = parseFloat(p.score_pop) || 0;
+        p.MCA_score = w_ov * ov + w_fit * fit + w_pop * pop;
 
-      layer.setStyle(styleFeature(layer.feature));
-      layer.bindPopup('Suitability index: ' + p.MCA_score.toFixed(2));
-    });
+        layer.setStyle(styleFeature(layer.feature));
+        layer.bindPopup('Suitability index: ' + p.MCA_score.toFixed(2));
+      });
+    }
   }
 
-  // Update percentage tekst bij slider beweging
+  // Slider display
   function updatePercentDisplay(idRange, idPercent) {
     const range = document.getElementById(idRange);
     const percent = document.getElementById(idPercent);
@@ -501,7 +498,7 @@ L.control.layers(null, overlays, { position: 'topright' }).addTo(map);
     document.getElementById('percent-fitness').textContent = '30%';
     document.getElementById('percent-ov').textContent = '20%';
     document.getElementById('percent-pop').textContent = '50%';
-    document.getElementById('percent-transparency').textContent = '70%';
+    document.getElementById('percent-transparency').textContent = '50%';
 
     currentTransparency = 0.5;
     if (layer_group) {
@@ -526,25 +523,10 @@ L.control.layers(null, overlays, { position: 'topright' }).addTo(map);
     toggleMenuBtn.style.display = 'none';
   });
 
-  // Start met menu zichtbaar
+  // Start menu zichtbaar
   controlBox.style.display = 'flex';
 
-document.getElementById('legend-toggle').addEventListener('click', function () {
-  const legendBody = document.getElementById('legend-body');
-  const toggle = this;
-
-  if (legendBody.style.display === 'none') {
-    legendBody.style.display = 'block';
-    toggle.textContent = '−';
-    toggle.title = 'Minimaliseer legenda';
-  } else {
-    legendBody.style.display = 'none';
-    toggle.textContent = '+';
-    toggle.title = 'Maximaliseer legenda';
-  }
-});
-
-  // Toon/verberg uitleg onderaan legenda
+  // Legend info toggle
   document.getElementById('legend-info-toggle').addEventListener('click', function () {
     const info = document.getElementById('legend-info');
     if (info.style.display === 'none') {
@@ -555,91 +537,104 @@ document.getElementById('legend-toggle').addEventListener('click', function () {
       this.title = 'Toon uitleg';
     }
   });
-fetch('https://raw.githubusercontent.com/geosenso92/fitness-locator-map/main/data/gemkaart24.json')
-  .then(response => response.json())
-  .then(gemeenteData => {
-  const gemeenteLayer = L.geoJSON(gemeenteData, {
-    filter: feature => feature.properties.gemeentenaam !== "Utrecht",
-    style: {
-      color: "#555",
-      weight: 1,
-      fillColor: "#f7f7f7",
-      fillOpacity: 0.3
-    },
-    onEachFeature: function (feature, layer) {
-      // Tooltip verschijnt alleen bij hover
-      layer.bindTooltip(feature.properties.gemeentenaam, {
-        sticky: true
-      });
-      layer.on({
-        mouseover: function (e) {
-          e.target.setStyle({
-            weight: 2,
-            color: '#000',
-            fillOpacity: 0.5
-          });
-          // Tooltip opent automatisch bij hover, maar voor zekerheid:
-          e.target.openTooltip();
+
+  // Legend collapse/expand (fixed for missing legend-body)
+  document.getElementById('legend-toggle').addEventListener('click', function () {
+    const legend = document.getElementById('legend');
+    if (legend.style.height === '30px') {
+      legend.style.height = '';
+      this.textContent = '−';
+      this.title = 'Minimaliseer legenda';
+    } else {
+      legend.style.height = '30px';
+      this.textContent = '+';
+      this.title = 'Maximaliseer legenda';
+    }
+  });
+
+  // Gemeente kaart
+  fetch('https://raw.githubusercontent.com/geosenso92/fitness-locator-map/main/data/gemkaart24.json')
+    .then(response => response.json())
+    .then(gemeenteData => {
+      const gemeenteLayer = L.geoJSON(gemeenteData, {
+        filter: feature => feature.properties.gemeentenaam !== "Utrecht",
+        style: {
+          color: "#555",
+          weight: 1,
+          fillColor: "#f7f7f7",
+          fillOpacity: 0.3
         },
-        mouseout: function (e) {
-          gemeenteLayer.resetStyle(e.target);
-          e.target.closeTooltip();
+        onEachFeature: function (feature, layer) {
+          layer.bindTooltip(feature.properties.gemeentenaam, {
+            sticky: true
+          });
+          layer.on({
+            mouseover: function (e) {
+              e.target.setStyle({
+                weight: 2,
+                color: '#000',
+                fillOpacity: 0.5
+              });
+              e.target.openTooltip();
+            },
+            mouseout: function (e) {
+              gemeenteLayer.resetStyle(e.target);
+              e.target.closeTooltip();
+            }
+          });
+        }
+      }).addTo(map);
+    })
+    .catch(error => {
+      console.error("Fout bij het laden van gemeentekaart:", error);
+    });
+
+  // Tekenfunctionaliteit
+  const drawnItems = new L.FeatureGroup().addTo(map);
+
+  const drawControl = new L.Control.Draw({
+    position: "bottomright",
+    edit: {
+      featureGroup: drawnItems,
+      edit: false,
+      remove: true
+    },
+    draw: {
+      polygon: true,
+      rectangle: true,
+      polyline: false,
+      circle: false,
+      marker: false,
+      circlemarker: false
+    }
+  });
+  map.addControl(drawControl);
+
+  // Event: als gebruiker iets tekent
+  map.on(L.Draw.Event.CREATED, function (event) {
+    const layer = event.layer;
+    drawnItems.clearLayers();
+    drawnItems.addLayer(layer);
+
+    const drawnGeoJSON = layer.toGeoJSON();
+    const selected = [];
+    if (layer_group) {
+      layer_group.eachLayer(function (featureLayer) {
+        const feature = featureLayer.toGeoJSON();
+        if (turf.booleanIntersects(drawnGeoJSON, feature)) {
+          selected.push(feature);
+          featureLayer.setStyle({
+            color: 'red',
+            weight: 2,
+            fillOpacity: 0.8,
+          });
+        } else {
+          featureLayer.setStyle(styleFeature(featureLayer.feature));
         }
       });
     }
-  }).addTo(map);
-})
-  .catch(error => {
-    console.error("Fout bij het laden van gemeentekaart:", error);
+    console.log("Geselecteerde features:", selected);
   });
-
-const drawnItems = new L.FeatureGroup().addTo(map);
-
-// Tekenfunctionaliteit
-const drawControl = new L.Control.Draw({
-  position: "bottomright", // THIS LINE CHANGES THE TOOLBAR POSITION
-  edit: {
-    featureGroup: drawnItems,
-    edit: false,
-    remove: true
-  },
-  draw: {
-    polygon: true,
-    rectangle: true,
-    polyline: false,
-    circle: false,
-    marker: false,
-    circlemarker: false
-  }
-});
-map.addControl(drawControl);
-
-// Event: als gebruiker iets tekent
-<script>
-map.on(L.Draw.Event.CREATED, function (event) {
-  const layer = event.layer;
-  drawnItems.clearLayers();
-  drawnItems.addLayer(layer);
-
-  const drawnGeoJSON = layer.toGeoJSON();
-  const selected = [];
-  // Use the correct layer group:
-  layer_group.eachLayer(function (featureLayer) {
-    const feature = featureLayer.toGeoJSON();
-    if (turf.booleanIntersects(drawnGeoJSON, feature)) {
-      selected.push(feature);
-      featureLayer.setStyle({
-        color: 'red',
-        weight: 2,
-        fillOpacity: 0.8, // Optional highlight
-      });
-    } else {
-      // Reset to original style
-      featureLayer.setStyle(styleFeature(featureLayer.feature));
-    }
-  });
-  console.log("Geselecteerde features:", selected);
-});
 </script>
 
 </body>
